fix: overflow hidden in initial loader

--- a/refactor/style.css
+++ b/refactor/style.css
@@ -54,6 +54,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   background-color: black;
   z-index: 99;
 }
